--- a/index.html
+++ b/index.html
@@ -4,35 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Product preview card component</title>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- My CSS -->
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="container">
-      <img src="./images/image-product-desktop.jpg" alt="" />
-      <div class="card-details">
-        <span>PERFUME</span>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-        <div class="price">
-          <p class="offer-price">$149.99</p>
-          <p class="original-price">$169.99</p>
+    <main>
+      <article class="product">
+        <picture class="product__image">
+          <source srcset="./images/image-product-desktop.jpg" media="(min-width: 645px)">
+          <img
+            src="./images/image-product-mobile.jpg"
+            alt="you have error in displaying img"
+          />
+        </picture>
+        <div class="product__content">
+          <p class="product__category">perfume</p>
+          <h1 class="product__title">Gabrielle Essence Eau De Parfum</h1>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer__Creator for the House of CHANEL.
+          </p>
+          <div class="price">
+            <p class="original-price">$149.99</p>
+            <p class="product__original-price">$169.99</p>
+          </div>
+          <button class="button" data-icon="shopping-cart">
+            <!-- <button class="button" data-icon="./images/icon-cart.svg"> -->
+            Add to Cart
+          </button>
         </div>
-        <div class="add-button">
-          <img src="./images/icon-cart.svg" alt="" />
-          <p class="button-text">Add to Cart</p>
-        </div>
-      </div>
-    </div>
+      </article>
+    </main>
   </body>
 </html>
